Have modified the conpot.cfg file and relocated the setup_conpot.sh file in bin to bin/edit.

--- a/docker/conpot.cfg
+++ b/docker/conpot.cfg
@@ -41,8 +41,8 @@ socket = dev        ; udp (sends to host:port), dev (sends to device)
 enabled = True
 host = 18.202.250.236
 port = 10000
-ident = dc3be2c2-27e8-11ea-8ec8-0a0ca3321aba
-secret = Qlg6NkCoXgq43XHC
+ident = CHANGE_ME
+secret = CHANGE_ME
 channels = ["conpot.events", ]
 
 [taxii]
